try to read scores.json

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 
 <body>
   Hello Jerry!
+  <script>
+    function loadJSON(callback) {
+      var xobj = new XMLHttpRequest();
+      xobj.overrideMimeType("application/json");
+      xobj.open('GET', 'scores.json', true);
+      xobj.onreadystatechange = function () {
+        if (xobj.readyState == 4 && xobj.status == "200") {
+          callback(JSON.parse(xobj.responseText));
+        }
+      };
+      xobj.send(null);
+    }
+
+    loadJSON(function (json) {
+      console.log(json); // this will log out the json object
+    });
+  </script>
 </body>
 
 </html>
